assets/styles/header.css
@media only screen and (max-width: 900px) {
  .unhastv-header__main-nav {
    display: none;
  }
  #sticky-header__cta {
    display: none !important;
  }
  #unhastv-header__cta {
    display: none !important;
  }
  .burger-icon-container {
    display: block !important;
  }
}
@media only screen and (max-width: 1200px) {
  #sticky-header__cta .cta-text {
    display: none !important;
  }
}

.burger-icon-container {
  display: none;
  cursor: pointer;
  scale: 1;
  transition: scale 100ms ease;
}
.burger-icon-container:hover {
  display: none;
  cursor: pointer;
  scale: 0.95;
}
.burger-icon-container:active {
  scale: 0.85;
}

#unhastv-header {
  background-color: var(--light-gray);
}
#unhastv-header__brand-cta {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 0;
}
#sticky-header {
  top: -200px;
}
.custom-logo {
  width: auto;
  max-height: 60px;
}
#sticky-header .custom-logo {
  height: 36px;
  filter: brightness(0) invert(1);
}

#unhastv-header__cta,
#sticky-header__cta,
#mobile-menu__cta {
  align-self: center;
  padding: 12px;
  border-radius: 6px;
  border: 1px solid var(--unhas-red);
  background-color: var(--unhas-red);
  white-space: nowrap;
  color: var(--light-gray);
  font-family: "Inria Sans", sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 5%;
  font-size: 16px;
  display: flex;
  align-items: center;
  gap: 8px;
  scale: 1;
  transition: all 100ms ease-in;
}

#sticky-header__cta {
  padding: 6px;
}

#sticky-header ul {
  margin: 0;
}
#unhastv-header__cta:hover,
#sticky-header__cta:hover,
#mobile-menu__cta:hover {
  background: var(--unhas-yellow);
  border: 1px solid var(--unhas-yellow);
  color: var(--ultra-dark-gray);
  scale: 0.98;
}
#unhastv-header__cta:hover .header__cta__record-icon,
#sticky-header__cta:hover .header__cta__record-icon {
  filter: brightness(0);
  transition: all 80ms ease-in;
}

.header__cta__record-icon {
  height: 24px;
}

.header__border-gradient {
  background: var(--unhas-red);
  height: 3px;
}

#sticky-header {
  width: 100%;
  position: fixed;
  left: 0;
  transition: all 150ms ease-in;
  background-color: var(--ultra-dark-gray);
  box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
  z-index: 1000;
}
#sticky-header__inner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 72px;
  gap: 40px;
}
.unhastv-header__main-nav {
  margin-right: auto;
  /* background: linear-gradient(180deg, #373737 0%, #0a0a0a 21.35%, #000 54.69%); */
  background-color: var(--ultra-dark-gray);
}

#sticky-header__inner .menu-main-menu {
  overflow-x: auto;
  display: flex;
}
.unhastv-header__main-nav .menu-main-menu {
  display: flex;
  font-size: 0.875rem;
  list-style-type: none;
  align-items: stretch;
  text-transform: uppercase;
  font-weight: bold;
  color: var(--light-gray);
  padding: 0;
  height: 72px;
}

.menu-main-menu > li {
  position: relative;
  min-height: 100%;
}
.menu-main-menu a {
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 1rem;
}
.menu-main-menu li:hover {
  transition: background-color 120ms ease-in-out;
  background-color: var(--unhas-red);
}
.menu-main-menu > li:hover > ul.sub-menu {
  display: flex;
  height: 72px;
}
/* .menu-main-menu > li:last-child:hover {
  transition: background-color 120ms ease-in-out;
  color: var(--ultra-dark-gray);
  background-color: var(--unhas-yellow);
} */

/* .menu-main-menu > li:last-child {
  color: var(--unhas-yellow);
} */

/* sub-menu styles */

#sticky-header ul.sub-menu {
  position: fixed;
}
#unhastv-header ul.sub-menu {
  position: absolute;
}

ul.sub-menu {
  background-color: var(--unhas-red);
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  z-index: 100;
}
ul.sub-menu li {
  padding: 4px;
  white-space: nowrap;
}
ul.sub-menu li:hover {
  background-color: var(--unhas-dark-red);
}

#mobile-menu {
  position: fixed;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  background-color: #fff;
  left: -100vw;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 2000;
  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 500ms;
}

#mobile-menu-close {
  position: absolute;
  top: 4px;
  right: 4px;
  object-fit: cover;
  rotate: 0deg;
  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 500ms;
  cursor: pointer;
  scale: 1;
}
#mobile-menu-close:active {
  scale: 0.85;
}

.mobile-menu-close__spin-right {
  rotate: 360deg !important;
}

.mobile-menu__reveal {
  left: 0 !important;
}

.mobile-menu__brand {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  height: 200px;
}

#mobile-menu .menu-main-header-menu-container {
  height: 100%;
}
#mobile-menu #menu-main-header-menu {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-evenly;
}
#mobile-menu #menu-main-header-menu > li {
  min-height: initial;
  flex: 1;
  text-transform: uppercase;
  font-weight: 700;
  border-top: 1px solid rgba(0, 0, 0, 0.25);
}
#mobile-menu #menu-main-header-menu > li:hover {
  color: var(--light-gray);
}
#mobile-menu #menu-main-header-menu .sub-menu {
  display: none;
}
.mobile-menu__footer {
  font-size: 0.675rem;
  padding: 1rem 0;
  text-align: center;
}

